kubernetes/monitoring/prometheus/thanos-compactor.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: thanos-compactor
  name: thanos-compactor
  namespace: monitoring
spec:
  ports:
  - name: http
    port: 10902
    targetPort: http
  selector:
    app.kubernetes.io/name: thanos-compactor

---

apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app.kubernetes.io/name: thanos-compactor
  name: thanos-compactor
  namespace: monitoring
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: thanos-compactor
  serviceName: thanos-compactor
  template:
    metadata:
      labels:
        app.kubernetes.io/name: thanos-compactor
    spec:
      containers:
      - args:
        - compact
        - --wait
        - --wait-interval=60m
        - --retention.resolution-raw=30d
        - --retention.resolution-5m=30d
        - --retention.resolution-1h=30d
        - --objstore.config=$(OBJSTORE_CONFIG)
        - --data-dir=/var/thanos/compactor
        image: quay.io/thanos/thanos:v0.14.0
        resources:
          requests:
            memory: 1Gi
        livenessProbe:
          failureThreshold: 4
          httpGet:
            path: /-/healthy
            port: 10902
            scheme: HTTP
          periodSeconds: 30
        name: thanos-compactor
        ports:
        - containerPort: 10902
          name: http
        readinessProbe:
          failureThreshold: 20
          httpGet:
            path: /-/ready
            port: 10902
            scheme: HTTP
          periodSeconds: 5
        volumeMounts:
        - mountPath: /var/thanos/compactor
          name: thanos-compactor-data
          readOnly: false
      terminationGracePeriodSeconds: 120
      volumes:
      - name: thanos-compactor-data
        hostPath:
          path: /var/lib/kubevolumes/thanos/compactor
          type: DirectoryOrCreate
