kubernetes/monitoring/prometheus/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: internal
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    cert-manager.io/cluster-issuer: letsencrypt
  labels:
    app: prometheus
  name: prometheus
spec:
  rules:
  - host: prometheus.yuha0.com
    http:
      paths:
      - backend:
          serviceName: prometheus-operated
          servicePort: 9090
        path: /
  tls:
  - hosts:
    - prometheus.yuha0.com

---

apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: internal
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    cert-manager.io/cluster-issuer: letsencrypt
  labels:
    app: thanos-query
  name: thanos-query
spec:
  rules:
  - host: thanos-query.yuha0.com
    http:
      paths:
      - backend:
          serviceName: thanos-query
          servicePort: 9090
        path: /
  tls:
  - hosts:
    - thanos-query.yuha0.com
